Fix the issue that project setting sidebar does not stretch to the screen bottom if a dropdown is opened and closed

--- a/web/src/main/java/com/turbodev/server/web/page/project/setting/project-setting.css
+++ b/web/src/main/java/com/turbodev/server/web/page/project/setting/project-setting.css
@@ -2,8 +2,12 @@
 	left: 240px;
 	background: white;
 	border-left: none;
-	position: absolute;
+	/* make it absolute as we do not want to make it stay fixed to occupy screen space on mobile screen */
+	position: absolute; 
 	z-index: 0;
+	/* use hacks below to make the sidebar extend to the screen bottom even if body does not reach to the bottom */
+	margin-bottom: -10000px;
+	padding-bottom: 10000px;
 }
 #project-setting>.sidebar>.tabs>li>a {
 	border-left: none;
